# log-view

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ansi.rs  buffer.rs  error.rs  main.rs  parser.rs  source.rs  string.rs  tui.rs
theme/: style.toml
