[package]
name = "logview"
version = "0.1.0"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
cursive = { version = "0.16.3", features = ["toml", "crossterm"] }
arraydeque = "0.4.5"
clap = "2.33.3"
regex = "1.5.4"
nom = "7.1.0"
