[package]
name = "logview"
version = "0.1.0"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
cursive = { version = "0.20.0", features = ["toml", "crossterm"] }
arraydeque = "0.5.1"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.2"
nom = "7.1.3"
